# ChangeLog for Gentoo Linux Installer
# Copyright 2005-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.665 2006/07/28 18:40:33 agaffney Exp $

  27 Jul 2006; Chris Gianelloni <wolf31o2@gentoo.org> bin/installer:
  I've commented out most of the code that used launch. It wasn't working and
  we don't have the time to fix it before the release. I'll look into it after
  the release and make it more robust and flexible.

  27 Jul 2006; Andrew Gaffney <agaffney@gentoo.org>
  src/templates/x86ArchitectureTemplate.py:
  clip logical partition at end of extended

  20 Jul 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  src/GLIInstallProfile.py:
  Added a few more applications to the list of extra packages to be merged,
  all from various GRP sets.

  19 Jul 2006; Chris Gianelloni <wolf31o2@gentoo.org> bin/installer:
  Added launch variable to the end of each try-run with auth, which should
  cause this to function properly. Of course, more testing is needed.

  19 Jul 2006; Chris Gianelloni <wolf31o2@gentoo.org> bin/installer:
  Fix a missed space in the installer script.

  17 Jul 2006; Andrew Gaffney <agaffney@gentoo.org>:
  src/GLIClientController.py:
  log version-stamp

  13 Jul 2006; Chris Gianelloni <wolf31o2@gentoo.org> bin/installer:
  Updated the installer script to allow specifying the front-end to run from
  the command line. Currently, it only supports dialog and gtk. It still needs
  some testing, however.

  9 July 2006; Preston Cody <codeman@gentoo.org>
  src/GLIGenDialog.py:
  make lilo only show up for x86 if non-networkless

  25 Jun 2006; Preston Cody <codeman@gentoo.org>
  src/GLIGenDialog.py:
  adding code to auto-add doscsi if a scsi drive detected.
  this code is also in the gtkfe already

  24 Jun 2006; Andrew Gaffney <agaffney@gentoo.org>
  src/GLIPortage.py:
  pass proper PORTAGE_TMPDIR

  17 Jun 2006; Andrew Gaffney <agaffney@gentoo.org>
  src/GLIUtility.py: