@@ -1,6 +1,10 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2005-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.665 2006/07/28 18:40:33 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.666 2006/07/28 20:48:44 agaffney Exp $
+
+  28 Jul 2006; Andrew Gaffney <agaffney@gentoo.org>
+  src/templates/x86ArchitectureTemplate.py:
+  move logical clipping logic a bit
 
   27 Jul 2006; Chris Gianelloni <wolf31o2@gentoo.org> bin/installer:
   I've commented out most of the code that used launch. It wasn't working and
